// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CLIGuide renders the contents when open 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 bhEuBi"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bhQbbx"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dyEUsc CLIGuide__StyledAccordion-sc-1q6mc5x-0 iqTbbH"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 fHIHJf"
      >
        <button
          aria-expanded="true"
          class="StyledButtonKind-sc-1vhfpnt-0 iZPaET"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 jXUMNe"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 iybtcl"
            >
              <span
                aria-hidden="true"
                class="StyledText-sc-1sadyjn-0 exyWG fa fa-shell"
                role="presentation"
              />
              <div
                class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jCHLZD"
              />
              <span
                class="StyledText-sc-1sadyjn-0 jBARPw"
              >
                Get something from somewhere via the Management API
              </span>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 gCCMgA"
            >
              <svg
                aria-label="FormUp"
                class="StyledIcon-sc-ofa7kd-0 bFjClC"
                viewBox="0 0 24 24"
              >
                <path
                  d="m18 15-6-6-6 6"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </button>
        <div
          class="StyledBox-sc-13pk1d4-0 kqmDKi"
          role="region"
          style=""
        >
          <div
            aria-hidden="false"
            class="StyledBox-sc-13pk1d4-0 kqmDKi Collapsible__AnimatedBox-sc-15kniua-0 fCmxUw"
            open=""
            style="max-height: 0;"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 leONfn"
            >
              Just some content
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CLIGuide renders without crashing 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 bhEuBi"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bhQbbx"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dyEUsc CLIGuide__StyledAccordion-sc-1q6mc5x-0 iqTbbH"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 fHIHJf"
      >
        <button
          aria-expanded="false"
          class="StyledButtonKind-sc-1vhfpnt-0 iZPaET"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 jXUMNe"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 iybtcl"
            >
              <span
                aria-hidden="true"
                class="StyledText-sc-1sadyjn-0 exyWG fa fa-shell"
                role="presentation"
              />
              <div
                class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jCHLZD"
              />
              <span
                class="StyledText-sc-1sadyjn-0 jBARPw"
              >
                Get something from somewhere via the Management API
              </span>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 gCCMgA"
            >
              <svg
                aria-label="FormDown"
                class="StyledIcon-sc-ofa7kd-0 bFjClC"
                viewBox="0 0 24 24"
              >
                <path
                  d="m18 9-6 6-6-6"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </button>
        <div
          class="StyledBox-sc-13pk1d4-0 kqmDKi"
          role="region"
        >
          <div
            aria-hidden="true"
            class="StyledBox-sc-13pk1d4-0 kqmDKi Collapsible__AnimatedBox-sc-15kniua-0 cyvPwx"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CLIGuidesList renders the children as-is if there is only one 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 bhEuBi"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bhQbbx"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 kqmDKi"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dyEUsc CLIGuide__StyledAccordion-sc-1q6mc5x-0 iqTbbH"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 fHIHJf"
        >
          <button
            aria-expanded="false"
            class="StyledButtonKind-sc-1vhfpnt-0 iZPaET"
            type="button"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 jXUMNe"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 iybtcl"
              >
                <span
                  aria-hidden="true"
                  class="StyledText-sc-1sadyjn-0 exyWG fa fa-shell"
                  role="presentation"
                />
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jCHLZD"
                />
                <span
                  class="StyledText-sc-1sadyjn-0 jBARPw"
                >
                  Get something from somewhere via the Management API
                </span>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 gCCMgA"
              >
                <svg
                  aria-label="FormDown"
                  class="StyledIcon-sc-ofa7kd-0 bFjClC"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m18 9-6 6-6-6"
                    fill="none"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </button>
          <div
            class="StyledBox-sc-13pk1d4-0 kqmDKi"
            role="region"
          >
            <div
              aria-hidden="true"
              class="StyledBox-sc-13pk1d4-0 kqmDKi Collapsible__AnimatedBox-sc-15kniua-0 cyvPwx"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CLIGuidesList renders the contents when open 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 bhEuBi"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bhQbbx"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jLyBAz"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 fHIHJf"
      >
        <button
          aria-expanded="true"
          class="StyledButtonKind-sc-1vhfpnt-0 iZPaET"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 jXUMNe"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 fyizrr"
            >
              <span
                aria-hidden="true"
                class="StyledText-sc-1sadyjn-0 dEnSbl fa fa-shell"
                role="presentation"
              />
              <div
                class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jCHLZD"
              />
              <span
                class="StyledText-sc-1sadyjn-0 iFAlKL"
              >
                Use the API to …
              </span>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 gCCMgA"
            >
              <svg
                aria-label="FormUp"
                class="StyledIcon-sc-ofa7kd-0 bFjClC"
                viewBox="0 0 24 24"
              >
                <path
                  d="m18 15-6-6-6 6"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </button>
        <div
          class="StyledBox-sc-13pk1d4-0 kqmDKi"
          role="region"
          style=""
        >
          <div
            aria-hidden="false"
            class="StyledBox-sc-13pk1d4-0 kqmDKi Collapsible__AnimatedBox-sc-15kniua-0 fCmxUw"
            open=""
            style="max-height: 0;"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 iBetar"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 dyEUsc CLIGuide__StyledAccordion-sc-1q6mc5x-0 iqTbbH"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 fHIHJf"
                >
                  <button
                    aria-expanded="false"
                    class="StyledButtonKind-sc-1vhfpnt-0 iZPaET"
                    type="button"
                  >
                    <div
                      class="StyledBox-sc-13pk1d4-0 jXUMNe"
                    >
                      <div
                        class="StyledBox-sc-13pk1d4-0 iybtcl"
                      >
                        <span
                          aria-hidden="true"
                          class="StyledText-sc-1sadyjn-0 exyWG fa fa-shell"
                          role="presentation"
                        />
                        <div
                          class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jCHLZD"
                        />
                        <span
                          class="StyledText-sc-1sadyjn-0 jBARPw"
                        >
                          Get something from somewhere
                        </span>
                      </div>
                      <div
                        class="StyledBox-sc-13pk1d4-0 gCCMgA"
                      >
                        <svg
                          aria-label="FormDown"
                          class="StyledIcon-sc-ofa7kd-0 bFjClC"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="m18 9-6 6-6-6"
                            fill="none"
                            stroke="#000"
                            stroke-width="2"
                          />
                        </svg>
                      </div>
                    </div>
                  </button>
                  <div
                    class="StyledBox-sc-13pk1d4-0 kqmDKi"
                    role="region"
                  >
                    <div
                      aria-hidden="true"
                      class="StyledBox-sc-13pk1d4-0 kqmDKi Collapsible__AnimatedBox-sc-15kniua-0 cyvPwx"
                    />
                  </div>
                </div>
              </div>
              <div
                class="StyledBox__StyledBoxGap-sc-13pk1d4-1 fwOCUJ"
              />
              <div
                class="StyledBox-sc-13pk1d4-0 dyEUsc CLIGuide__StyledAccordion-sc-1q6mc5x-0 iqTbbH"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 fHIHJf"
                >
                  <button
                    aria-expanded="false"
                    class="StyledButtonKind-sc-1vhfpnt-0 iZPaET"
                    type="button"
                  >
                    <div
                      class="StyledBox-sc-13pk1d4-0 jXUMNe"
                    >
                      <div
                        class="StyledBox-sc-13pk1d4-0 iybtcl"
                      >
                        <span
                          aria-hidden="true"
                          class="StyledText-sc-1sadyjn-0 exyWG fa fa-shell"
                          role="presentation"
                        />
                        <div
                          class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jCHLZD"
                        />
                        <span
                          class="StyledText-sc-1sadyjn-0 jBARPw"
                        >
                          Get something else from somewhere else
                        </span>
                      </div>
                      <div
                        class="StyledBox-sc-13pk1d4-0 gCCMgA"
                      >
                        <svg
                          aria-label="FormDown"
                          class="StyledIcon-sc-ofa7kd-0 bFjClC"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="m18 9-6 6-6-6"
                            fill="none"
                            stroke="#000"
                            stroke-width="2"
                          />
                        </svg>
                      </div>
                    </div>
                  </button>
                  <div
                    class="StyledBox-sc-13pk1d4-0 kqmDKi"
                    role="region"
                  >
                    <div
                      aria-hidden="true"
                      class="StyledBox-sc-13pk1d4-0 kqmDKi Collapsible__AnimatedBox-sc-15kniua-0 cyvPwx"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CLIGuidesList renders without crashing 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 bhEuBi"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bhQbbx"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 kqmDKi"
    />
  </div>
</div>
`;
